finish bubbleview code and create first set of codecharts

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -10,8 +10,9 @@
     <div id="image"></div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="./codechart.js"></script>
+    <script src="./bubbleview.js"></script>
     <script>
-      codechart({img: 39, width: 600, height: 753});
+      bubbleview({img: 23, width: 600, height: 750});
     </script>
 
     <!-- 23, 600x750 // 39, 600x753 // 9, 600x776 // 21, 600x862 -->
