work on visualizer data

--- a/visualizer/bubbleview.html
+++ b/visualizer/bubbleview.html
@@ -7,12 +7,12 @@
     <title>Visualizer</title>
   </head>
   <body>
-    <div id="image"></div>
+    <div id="container"></div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="./codechart.js"></script>
-    <script src="./bubbleview.js"></script>
+    <script src="./bubbleview-2.js"></script>
     <script>
-      bubbleview({img: 21, width: 600, height: 862});
+      bubbleview({img: 39, width: 600, height: 753});
     </script>
 
     <!-- 23, 600x750 // 39, 600x753 // 9, 600x776 // 21, 600x862 -->
