finish making visualizer

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -9,10 +9,10 @@
   <body>
     <div id="container"></div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="./codechart.js"></script>
+    <script src="./codechart-2.js"></script>
     <script src="./bubbleview-2.js"></script>
     <script>
-      bubbleview({img: 21, width: 600, height: 753});
+      codechart({img: 21, width: 600, height: 862});
     </script>
 
     <!-- 23, 600x750 // 39, 600x753 // 9, 600x776 // 21, 600x862 -->
