--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -7,14 +7,20 @@
     <title>Visualizer</title>
   </head>
   <body>
-    <div id="container"></div>
+    <div id="container">
+      <p>
+        Participant, points, total distance, mean segment distance, median
+        segment distance, total distance/points
+      </p>
+    </div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="./codechart-2.js"></script>
     <script src="./bubbleview-2.js"></script>
     <script src="./pathMath.js"></script>
     <script>
       // codechart({img: 23, width: 600, height: 750});
-      pathMath(23);
+      [23, 39, 9, 21].forEach(image => pathMath(image));
+      // pathMath(23);
     </script>
 
     <!-- 23, 600x750 // 39, 600x753 // 9, 600x776 // 21, 600x862 -->
