submit part 2; create draft for part 3

--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -18,8 +18,8 @@
     <script src="./bubbleview-2.js"></script>
     <script src="./pathMath.js"></script>
     <script>
-      // codechart({img: 23, width: 600, height: 750});
-      [23, 39, 9, 21].forEach(image => pathMath(image));
+      codechart({img: 23, width: 600, height: 750});
+      // [23, 39, 9, 21].forEach(image => pathMath(image));
       // pathMath(23);
     </script>
 
